--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -43,6 +43,7 @@
   background-position: center;
   background-image: url('data:image/svg+xml;utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1 1"><rect width="200" height="200" style="fill:grey;fill-opacity:0.5;" /></svg>');
   padding: 10px;
+  cursor: pointer;
 }
 
 .exp-node-shape-selection {
@@ -50,7 +51,7 @@
   width: 200px;
   position: absolute;
   border-radius: 5px;
-  cursor: pointer;
+  pointer-events: none;
 }
 
 .exp-node-actions {
