--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -1,5 +1,5 @@
-@import '../../node_modules/materialize-css/dist/css/materialize.min.css';
-@import '../../node_modules/material-design-icons/iconfont/material-icons.css';
+@import '~materialize-css/dist/css/materialize.min.css';
+//@import '~material-design-icons/iconfont/material-icons.css';
 
 .exp-node-wrapper {
   width: 100%;
